montague spacing fix

--- a/public/style/montague.css
+++ b/public/style/montague.css
@@ -12,7 +12,7 @@
 
 .slide1-info {
     margin-top: 10vh;
-    margin-bottom: 25vh;
+    margin-bottom: 40vh;
     text-align: center;
 }
 
